--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-02-29\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##### Model #####\n",
     "\n",
@@ -71,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -162,14 +153,17 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Total width of full interior rows, full exterior rows, and exterior rows should be less than the width of  the parking lot\n",
-    "model.addConstr(quicksum((2*C3[i]+D1[i])*X[i] + (C1[i]+D1[i]+C3[i])*Xe[i] + (C1[i]+D1[i])*E[i] for i in range(num_of_angles)) <= B)\n",
+    "model.addConstr(quicksum((2*C3[i]+D1[i])*X[i] + (2*C7[i]+D2[i])*XMot[i] + (2*C5[i]+D1[i])*XBev[i] \\\n",
+    "    + (C1[i]+D1[i]+C3[i])*Xe[i] + (C6[i]+D2[i]+C7[i])*XeMot[i] + (C4[i]+D1[i]+C5[i])*XeBev[i] \\\n",
+    "    + (C1[i]+D1[i])*E[i] + (C6[i]+D1[i])*EMot[i] + (C4[i]+D1[i])*EBev[i] \\\n",
+    "    for i in range(num_of_angles)) <= B)\n",
     "\n",
     "# The number of spots in each rows should be less than its upper bound\n",
     "# Upper bound = (max length of row / width of a spot) * number of rows\n",
@@ -191,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -203,28 +197,47 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 47 rows, 93 columns and 135 nonzeros\n",
-      "Model fingerprint: 0x31be0ade\n",
+      "Optimize a model with 94 rows, 93 columns and 300 nonzeros\n",
+      "Model fingerprint: 0x0e75a642\n",
       "Variable types: 0 continuous, 93 integer (3 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+02]\n",
       "  Objective range  [1e+00, 1e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [2e+00, 1e+02]\n",
-      "Found heuristic solution: objective 2.344000e+12\n",
-      "Presolve removed 2 rows and 2 columns\n",
+      "\n",
+      "MIP start from previous solve did not produce a new incumbent solution\n",
+      "MIP start from previous solve violates constraint R47 by 218099999898.100006104\n",
+      "\n",
+      "Found heuristic solution: objective 68.0000000\n",
+      "Presolve removed 93 rows and 87 columns\n",
       "Presolve time: 0.00s\n",
+      "Presolved: 1 rows, 6 columns, 6 nonzeros\n",
+      "Found heuristic solution: objective 3392.0000000\n",
+      "Variable types: 0 continuous, 6 integer (0 binary)\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
-      "Thread count was 1 (of 8 available processors)\n",
+      "Root relaxation: objective 3.563576e+03, 1 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
-      "Solution count 1: 2.344e+12 \n",
-      "No other solutions better than 0\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "Model is unbounded\n",
-      "Warning: some integer variables take values larger than the maximum\n",
-      "         supported value (2000000000)\n",
-      "Best objective 2.344000000068e+12, best bound -, gap -\n"
+      "     0     0 3563.57647    0    1 3392.00000 3563.57647  5.06%     -    0s\n",
+      "H    0     0                    3510.0000000 3563.57647  1.53%     -    0s\n",
+      "H    0     0                    3542.0000000 3556.11155  0.40%     -    0s\n",
+      "     0     0 3555.53425    0    1 3542.00000 3555.53425  0.38%     -    0s\n",
+      "     0     0 3542.00000    0    2 3542.00000 3542.00000  0.00%     -    0s\n",
+      "\n",
+      "Cutting planes:\n",
+      "  Gomory: 1\n",
+      "  MIR: 1\n",
+      "\n",
+      "Explored 1 nodes (4 simplex iterations) in 0.08 seconds (0.00 work units)\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 4: 3542 3510 3392 68 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 3.542000000000e+03, best bound 3.542000000000e+03, gap 0.0000%\n"
      ]
     }
    ],
@@ -242,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +282,31 @@
     "results.write(f'\\nE')\n",
     "for i in range(num_of_angles):\n",
     "    results.write(f',{E[i].x}')\n",
+    "\n",
+    "results.write(f'\\nXBev')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{XBev[i].x}')\n",
     "    \n",
+    "results.write(f'\\nXeBev')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{XeBev[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nEBev')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{EBev[i].x}')   \n",
+    "\n",
+    "results.write(f'\\nXMot')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{X[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nXeMot')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{Xe[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nEMot')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{E[i].x}')\n",
+    "\n",
     "results.write(f'\\nn')\n",
     "for i in range(num_of_angles):\n",
     "    results.write(f',{n[i].x}')\n",
@@ -281,6 +318,30 @@
     "results.write(f'\\nnEE')\n",
     "for i in range(num_of_angles):\n",
     "    results.write(f',{nEE[i].x}')\n",
+    "\n",
+    "results.write(f'\\nnBot')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{nBev[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nneBot')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{neBev[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nnEEBot')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{nEEBev[i].x}')\n",
+    "\n",
+    "results.write(f'\\nn')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{nMot[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nneMot')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{neMot[i].x}')\n",
+    "    \n",
+    "results.write(f'\\nnEEMot')\n",
+    "for i in range(num_of_angles):\n",
+    "    results.write(f',{nEEMot[i].x}')\n",
     "\n",
     "results.close()"
    ]
