--- a/OR_FP_draw.ipynb
+++ b/OR_FP_draw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def DRAW(B, L, w, X, Xe, E):\n",
     "    \"\"\"\n",
-    "    X : Full interior rows (兩內部、一通道) F3 = 2*C3 + D\n",
-    "    Xe : Full exterior rows (一貼牆、一通道、一內部) F1 = C1 + C3 + D\n",
-    "    E : Exterior (一條貼牆、一通道) C1 + D\n",
+    "    X : Full interior rows (兩內部、一通道) F3 = 2*C3 + D1\n",
+    "    Xe : Full exterior rows (一貼牆、一通道、一內部) F1 = C1 + C3 + D1\n",
+    "    E : Exterior (一條貼牆、一通道) C1 + D1\n",
     "    n : X 車格數\n",
     "    ne : Xe 車格數\n",
     "    nEE : E 車格數\n",
@@ -48,8 +48,14 @@
     "    params = {'F3':[10.30, 12.55, 14.80, 17.40, 18.00],\n",
     "            'F1':[11.40, 13.45, 15.65, 17.75, 18.00],\n",
     "            'C1':[4.50, 5.30, 5.60, 5.50, 5.00],\n",
+    "            \n",
     "            'C3':[3.40, 4.40, 5.05, 5.15, 5.00],\n",
-    "            'D':[3.5, 3.75, 4.5, 6.00, 7.00]}\n",
+    "            'C4': [6.0, 6.5, 6.6, 6.3, 5.5],\n",
+    "            'C5': [6.0, 6.15, 6.05, 5.40, 4.40],\n",
+    "            'C6': [2.0, 2.2, 2.24, 2.12, 1.8],\n",
+    "            'C7': [2.0, 2.06, 2.02, 1.76, 1.36],\n",
+    "            'D1':[3.5, 3.75, 4.5, 6.00, 7.00],\n",
+    "            'D2':[2.8, 2.4, 1.8, 1.5, 1.4]}\n",
     "\n",
     "    angle_color = {0:'olive', 1:'blue', 2:'red', 3:'green', 4:'orange'}\n",
     "\n",
@@ -78,18 +84,18 @@
     "            if value==1:\n",
     "                x1, y1 = [params['C1'][index], params['C1'][index]], [0, L]\n",
     "                plt.plot(x1, y1, color=\"blue\")\n",
-    "                x1, y1 = [params['C1'][index]+params['D'][index], params['C1'][index]+params['D'][index]], [twoway, L-twoway]\n",
+    "                x1, y1 = [params['C1'][index]+params['D1'][index], params['C1'][index]+params['D1'][index]], [twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "                x1, y1 = [params['F1'][index], params['F1'][index]], [twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
-    "                x1, y1 = [params['C1'][index]+params['D'][index], params['F1'][index]], [twoway, twoway]\n",
+    "                x1, y1 = [params['C1'][index]+params['D1'][index], params['F1'][index]], [twoway, twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
-    "                x1, y1 = [params['C1'][index]+params['D'][index], params['F1'][index]], [L-twoway, L-twoway]\n",
+    "                x1, y1 = [params['C1'][index]+params['D1'][index], params['F1'][index]], [L-twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "\n",
     "                plt.axvspan(0, params['C1'][index], alpha=0.3, color=angle_color[index])\n",
     "                plt.plot()\n",
-    "                plt.axvspan(params['C1'][index]+params['D'][index], params['F1'][index], ymin=twoway/L, \n",
+    "                plt.axvspan(params['C1'][index]+params['D1'][index], params['F1'][index], ymin=twoway/L, \n",
     "                            ymax=1-twoway/L, alpha=0.3, color=angle_color[index])\n",
     "                plt.plot()\n",
     "\n",
@@ -99,11 +105,11 @@
     "                #print(params['C1'][index], params['D'][index])\n",
     "                x1, y1 = [B - params['C1'][index], B - params['C1'][index]], [0, L]\n",
     "                plt.plot(x1, y1, color=\"red\")\n",
-    "                x1, y1 = [B-params['C1'][index]-params['D'][index], B-params['C1'][index]-params['D'][index]], [twoway, L-twoway]\n",
+    "                x1, y1 = [B-params['C1'][index]-params['D1'][index], B-params['C1'][index]-params['D1'][index]], [twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"red\", linestyle=\"--\")\n",
     "                plt.axvspan(B - params['C1'][index], B, alpha=0.3, color=angle_color[index])\n",
     "                plt.plot()\n",
-    "                right = B-params['C1'][index]-params['D'][index]\n",
+    "                right = B-params['C1'][index]-params['D1'][index]\n",
     "\n",
     "    if numE==0 and numXe==2:\n",
     "        cnt = 0\n",
@@ -111,18 +117,18 @@
     "            if binary >= 1 and cnt == 0:\n",
     "                x1, y1 = [params['C1'][index], params['C1'][index]], [0, L]\n",
     "                plt.plot(x1, y1, color=\"blue\")\n",
-    "                x1, y1 = [params['C1'][index]+params['D'][index], params['C1'][index]+params['D'][index]], [twoway, L-twoway]\n",
+    "                x1, y1 = [params['C1'][index]+params['D1'][index], params['C1'][index]+params['D1'][index]], [twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "                x1, y1 = [params['F1'][index], params['F1'][index]], [twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
-    "                x1, y1 = [params['C1'][index]+params['D'][index], params['F1'][index]], [twoway, twoway]\n",
+    "                x1, y1 = [params['C1'][index]+params['D1'][index], params['F1'][index]], [twoway, twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
-    "                x1, y1 = [params['C1'][index]+params['D'][index], params['F1'][index]], [L-twoway, L-twoway]\n",
+    "                x1, y1 = [params['C1'][index]+params['D1'][index], params['F1'][index]], [L-twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "                \n",
     "                plt.axvspan(0, params['C1'][index], alpha=0.3, color=angle_color[index])\n",
     "                plt.plot()\n",
-    "                plt.axvspan(params['C1'][index]+params['D'][index], params['F1'][index], ymin=twoway/L, \n",
+    "                plt.axvspan(params['C1'][index]+params['D1'][index], params['F1'][index], ymin=twoway/L, \n",
     "                            ymax=1-twoway/L, alpha=0.3, color=angle_color[index])\n",
     "                plt.plot()\n",
     "                left = params['F1'][index]\n",
@@ -130,14 +136,14 @@
     "                if binary == 2:\n",
     "                    x1, y1 = [B - params['C1'][index], B - params['C1'][index]], [0, L]\n",
     "                    plt.plot(x1, y1, color=\"blue\")\n",
-    "                    x1, y1 = [B-params['C1'][index]-params['D'][index], B-params['C1'][index]-params['D'][index]], [twoway, L-twoway]\n",
+    "                    x1, y1 = [B-params['C1'][index]-params['D1'][index], B-params['C1'][index]-params['D1'][index]], [twoway, L-twoway]\n",
     "                    plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "                    x1, y1 = [B-params['F1'][index], B-params['F1'][index]], [twoway, L-twoway]\n",
     "                    plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "                    right = B-params['F1'][index]\n",
-    "                    x1, y1 = [B-params['C1'][index]-params['D'][index], B-params['F1'][index]], [twoway, twoway]\n",
+    "                    x1, y1 = [B-params['C1'][index]-params['D1'][index], B-params['F1'][index]], [twoway, twoway]\n",
     "                    plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
-    "                    x1, y1 = [B-params['C1'][index]-params['D'][index], B-params['F1'][index]], [L-twoway, L-twoway]\n",
+    "                    x1, y1 = [B-params['C1'][index]-params['D1'][index], B-params['F1'][index]], [L-twoway, L-twoway]\n",
     "                    plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "                    \n",
     "                    plt.axvspan(B - params['C1'][index], B, alpha=0.3, color=angle_color[index])\n",
@@ -149,18 +155,18 @@
     "            elif binary == 1 and cnt == 1:\n",
     "                x1, y1 = [B - params['C1'][index], B - params['C1'][index]], [0, L]\n",
     "                plt.plot(x1, y1, color=\"blue\")\n",
-    "                x1, y1 = [B-params['C1'][index]-params['D'][index], B-params['C1'][index]-params['D'][index]], [twoway, L-twoway]\n",
+    "                x1, y1 = [B-params['C1'][index]-params['D1'][index], B-params['C1'][index]-params['D1'][index]], [twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "                x1, y1 = [B-params['F1'][index], B-params['F1'][index]], [twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "                right = B-params['F1'][index]\n",
-    "                x1, y1 = [B-params['C1'][index]-params['D'][index], B-params['F1'][index]], [twoway, twoway]\n",
+    "                x1, y1 = [B-params['C1'][index]-params['D1'][index], B-params['F1'][index]], [twoway, twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
-    "                x1, y1 = [B-params['C1'][index]-params['D'][index], B-params['F1'][index]], [L-twoway, L-twoway]\n",
+    "                x1, y1 = [B-params['C1'][index]-params['D1'][index], B-params['F1'][index]], [L-twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"blue\", linestyle=\"--\")\n",
     "                plt.axvspan(B - params['C1'][index], B, alpha=0.3, color=angle_color[index])\n",
     "                plt.plot()\n",
-    "                plt.axvspan(B-params['F1'][index], B-params['C1'][index]-params['D'][index], ymin=twoway/L, \n",
+    "                plt.axvspan(B-params['F1'][index], B-params['C1'][index]-params['D1'][index], ymin=twoway/L, \n",
     "                            ymax=1-twoway/L, alpha=0.3, color=angle_color[index])\n",
     "                plt.plot()\n",
     "\n",
@@ -170,9 +176,9 @@
     "            if binary >= 1 and cnt == 0:\n",
     "                x1, y1 = [params['C1'][index], params['C1'][index]], [0, L]\n",
     "                plt.plot(x1, y1, color=\"red\")\n",
-    "                x1, y1 = [params['C1'][index]+params['D'][index], params['C1'][index]+params['D'][index]], [twoway, L-twoway]\n",
+    "                x1, y1 = [params['C1'][index]+params['D1'][index], params['C1'][index]+params['D1'][index]], [twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"red\", linestyle=\"--\")\n",
-    "                left = params['C1'][index]+params['D'][index]\n",
+    "                left = params['C1'][index]+params['D1'][index]\n",
     "                plt.axvspan(0, params['C1'][index], alpha=0.3, color=angle_color[index])\n",
     "                plt.plot()\n",
     "\n",
@@ -180,18 +186,18 @@
     "                if binary == 2:\n",
     "                    x1, y1 = [B - params['C1'][index], B - params['C1'][index]], [0, L]\n",
     "                    plt.plot(x1, y1, color=\"red\")\n",
-    "                    x1, y1 = [B-params['C1'][index]-params['D'][index], B-params['C1'][index]-params['D'][index]], [twoway, L-twoway]\n",
+    "                    x1, y1 = [B-params['C1'][index]-params['D1'][index], B-params['C1'][index]-params['D1'][index]], [twoway, L-twoway]\n",
     "                    plt.plot(x1, y1, color=\"red\", linestyle=\"--\")\n",
-    "                    right = B-params['C1'][index]-params['D'][index]\n",
+    "                    right = B-params['C1'][index]-params['D1'][index]\n",
     "                    plt.axvspan(B - params['C1'][index], B, alpha=0.3, color=angle_color[index])\n",
     "                    plt.plot()\n",
     "                    cnt += 1\n",
     "            elif binary == 1 and cnt == 1:\n",
     "                x1, y1 = [B - params['C1'][index], B - params['C1'][index]], [0, L]\n",
     "                plt.plot(x1, y1, color=\"red\")\n",
-    "                x1, y1 = [B-params['C1'][index]-params['D'][index], B-params['C1'][index]-params['D'][index]], [twoway, L-twoway]\n",
+    "                x1, y1 = [B-params['C1'][index]-params['D1'][index], B-params['C1'][index]-params['D1'][index]], [twoway, L-twoway]\n",
     "                plt.plot(x1, y1, color=\"red\", linestyle=\"--\")\n",
-    "                right = B-params['C1'][index]-params['D'][index]\n",
+    "                right = B-params['C1'][index]-params['D1'][index]\n",
     "                plt.axvspan(B - params['C1'][index], B, alpha=0.3, color=angle_color[index])\n",
     "                plt.plot()\n",
     "                \n",
@@ -205,7 +211,7 @@
     "            plt.plot(x1, y1, color=\"green\", linestyle=\"--\")\n",
     "            x1, y1 = [left + params['C3'][index], left + params['C3'][index]], [twoway, L-twoway]\n",
     "            plt.plot(x1, y1, color=\"green\", linestyle=\"--\")\n",
-    "            x1, y1 = [left + params['C3'][index] + params['D'][index], left + params['C3'][index] + params['D'][index]], [twoway, L-twoway]\n",
+    "            x1, y1 = [left + params['C3'][index] + params['D1'][index], left + params['C3'][index] + params['D1'][index]], [twoway, L-twoway]\n",
     "            plt.plot(x1, y1, color=\"green\", linestyle=\"--\")\n",
     "            x1, y1 = [left + params['F3'][index], left + params['F3'][index]], [twoway, L-twoway]\n",
     "            plt.plot(x1, y1, color=\"green\", linestyle=\"--\")\n",
@@ -215,15 +221,15 @@
     "            x1, y1 = [left, left + params['C3'][index]], [L-twoway, L-twoway]\n",
     "            plt.plot(x1, y1, color=\"green\", linestyle=\"--\")\n",
     "\n",
-    "            x1, y1 = [left + params['C3'][index] + params['D'][index], left + params['F3'][index]], [twoway, twoway]\n",
+    "            x1, y1 = [left + params['C3'][index] + params['D1'][index], left + params['F3'][index]], [twoway, twoway]\n",
     "            plt.plot(x1, y1, color=\"green\", linestyle=\"--\")\n",
-    "            x1, y1 = [left + params['C3'][index] + params['D'][index], left + params['F3'][index]], [L-twoway, L-twoway]\n",
+    "            x1, y1 = [left + params['C3'][index] + params['D1'][index], left + params['F3'][index]], [L-twoway, L-twoway]\n",
     "            plt.plot(x1, y1, color=\"green\", linestyle=\"--\")\n",
     "\n",
     "            plt.axvspan(left, left + params['C3'][index], alpha=0.3, color=angle_color[index], ymin=twoway/L, \n",
     "                            ymax=1-twoway/L)\n",
     "            plt.plot()\n",
-    "            plt.axvspan(left + params['C3'][index] + params['D'][index], left + params['F3'][index], ymin=twoway/L, \n",
+    "            plt.axvspan(left + params['C3'][index] + params['D1'][index], left + params['F3'][index], ymin=twoway/L, \n",
     "                            ymax=1-twoway/L, alpha=0.3, color=angle_color[index])\n",
     "            plt.plot()\n",
     "            \n",
@@ -258,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
