--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Maximize the total number of parking spots\n",
     "model.setObjective(\n",
-    "    quicksum(n[i] + ne[i] + nEE[i] + nBev[i] + nMot[i] for i in range(num_of_angles)),\n",
+    "    quicksum(n[i] + ne[i] + nEE[i] + nBev[i] + neBev[i] + nEEBev[i] + nMot[i]+ neMot[i]+ nEEMot[i] for i in range(num_of_angles)),\n",
     "    GRB.MAXIMIZE)"
    ]
   },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -197,47 +197,42 @@
       "CPU model: Intel(R) Core(TM) i5-1035G1 CPU @ 1.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 94 rows, 93 columns and 300 nonzeros\n",
-      "Model fingerprint: 0x0e75a642\n",
+      "Optimize a model with 47 rows, 93 columns and 165 nonzeros\n",
+      "Model fingerprint: 0x92b01621\n",
       "Variable types: 0 continuous, 93 integer (3 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+02]\n",
       "  Objective range  [1e+00, 1e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [2e+00, 1e+02]\n",
-      "\n",
-      "MIP start from previous solve did not produce a new incumbent solution\n",
-      "MIP start from previous solve violates constraint R47 by 218099999898.100006104\n",
-      "\n",
       "Found heuristic solution: objective 68.0000000\n",
-      "Presolve removed 93 rows and 87 columns\n",
+      "Presolve removed 45 rows and 84 columns\n",
       "Presolve time: 0.00s\n",
-      "Presolved: 1 rows, 6 columns, 6 nonzeros\n",
-      "Found heuristic solution: objective 3392.0000000\n",
-      "Variable types: 0 continuous, 6 integer (0 binary)\n",
+      "Presolved: 2 rows, 9 columns, 13 nonzeros\n",
+      "Found heuristic solution: objective 3693.0000000\n",
+      "Variable types: 0 continuous, 9 integer (0 binary)\n",
       "\n",
-      "Root relaxation: objective 3.563576e+03, 1 iterations, 0.00 seconds (0.00 work units)\n",
+      "Root relaxation: objective 3.875906e+03, 3 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0 3563.57647    0    1 3392.00000 3563.57647  5.06%     -    0s\n",
-      "H    0     0                    3510.0000000 3563.57647  1.53%     -    0s\n",
-      "H    0     0                    3542.0000000 3556.11155  0.40%     -    0s\n",
-      "     0     0 3555.53425    0    1 3542.00000 3555.53425  0.38%     -    0s\n",
-      "     0     0 3542.00000    0    2 3542.00000 3542.00000  0.00%     -    0s\n",
+      "     0     0 3875.90588    0    1 3693.00000 3875.90588  4.95%     -    0s\n",
+      "H    0     0                    3860.0000000 3875.90588  0.41%     -    0s\n",
+      "     0     0 3868.00000    0    2 3860.00000 3868.00000  0.21%     -    0s\n",
       "\n",
       "Cutting planes:\n",
-      "  Gomory: 1\n",
-      "  MIR: 1\n",
+      "  Gomory: 3\n",
+      "  MIR: 2\n",
+      "  StrongCG: 1\n",
       "\n",
-      "Explored 1 nodes (4 simplex iterations) in 0.08 seconds (0.00 work units)\n",
+      "Explored 1 nodes (5 simplex iterations) in 0.07 seconds (0.00 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 4: 3542 3510 3392 68 \n",
+      "Solution count 3: 3860 3693 68 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 3.542000000000e+03, best bound 3.542000000000e+03, gap 0.0000%\n"
+      "Best objective 3.860000000000e+03, best bound 3.860000000000e+03, gap 0.0000%\n"
      ]
     }
    ],
@@ -255,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
