抓到了一點bug

--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
       "  MIR: 2\n",
       "  StrongCG: 1\n",
       "\n",
-      "Explored 1 nodes (5 simplex iterations) in 0.07 seconds (0.00 work units)\n",
+      "Explored 1 nodes (5 simplex iterations) in 0.05 seconds (0.00 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 3: 3860 3693 68 \n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,15 +292,15 @@
     "\n",
     "results.write(f'\\nXMot')\n",
     "for i in range(num_of_angles):\n",
-    "    results.write(f',{X[i].x}')\n",
+    "    results.write(f',{XMot[i].x}')\n",
     "    \n",
     "results.write(f'\\nXeMot')\n",
     "for i in range(num_of_angles):\n",
-    "    results.write(f',{Xe[i].x}')\n",
+    "    results.write(f',{XeMot[i].x}')\n",
     "    \n",
     "results.write(f'\\nEMot')\n",
     "for i in range(num_of_angles):\n",
-    "    results.write(f',{E[i].x}')\n",
+    "    results.write(f',{EMot[i].x}')\n",
     "\n",
     "results.write(f'\\nn')\n",
     "for i in range(num_of_angles):\n",
