--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Maximize the total number of parking spots\n",
     "model.setObjective(\n",
-    "    quicksum(n[i] + ne[i] + nEE[i] + nBev[i] + neBev[i] + nEEBev[i] + nMot[i]+ neMot[i]+ nEEMot[i] for i in range(num_of_angles)),\n",
+    "    quicksum(n[i] + ne[i] + nEE[i] + 1.5*(nBev[i] + neBev[i] + nEEBev[i]) + (4/25)*(nMot[i]+ neMot[i]+ nEEMot[i]) for i in range(num_of_angles)),\n",
     "    GRB.MAXIMIZE)"
    ]
   },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -198,41 +198,43 @@
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 47 rows, 93 columns and 165 nonzeros\n",
-      "Model fingerprint: 0x92b01621\n",
+      "Model fingerprint: 0x3492a275\n",
       "Variable types: 0 continuous, 93 integer (3 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+02]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
+      "  Objective range  [2e-01, 2e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [2e+00, 1e+02]\n",
       "Found heuristic solution: objective 68.0000000\n",
-      "Presolve removed 45 rows and 84 columns\n",
+      "Presolve removed 45 rows and 67 columns\n",
       "Presolve time: 0.00s\n",
-      "Presolved: 2 rows, 9 columns, 13 nonzeros\n",
-      "Found heuristic solution: objective 3693.0000000\n",
-      "Variable types: 0 continuous, 9 integer (0 binary)\n",
+      "Presolved: 2 rows, 26 columns, 39 nonzeros\n",
+      "Found heuristic solution: objective 804.0800000\n",
+      "Variable types: 0 continuous, 26 integer (0 binary)\n",
       "\n",
-      "Root relaxation: objective 3.875906e+03, 3 iterations, 0.00 seconds (0.00 work units)\n",
+      "Root relaxation: objective 8.183133e+02, 3 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0 3875.90588    0    1 3693.00000 3875.90588  4.95%     -    0s\n",
-      "H    0     0                    3860.0000000 3875.90588  0.41%     -    0s\n",
-      "     0     0 3868.00000    0    2 3860.00000 3868.00000  0.21%     -    0s\n",
+      "     0     0  818.31325    0    1  804.08000  818.31325  1.77%     -    0s\n",
+      "H    0     0                     808.5000000  818.31325  1.21%     -    0s\n",
+      "     0     0  813.81250    0    2  808.50000  813.81250  0.66%     -    0s\n",
+      "     0     0  813.81250    0    1  808.50000  813.81250  0.66%     -    0s\n",
+      "     0     0     cutoff    0       808.50000  808.50000  0.00%     -    0s\n",
       "\n",
       "Cutting planes:\n",
-      "  Gomory: 3\n",
-      "  MIR: 2\n",
+      "  Gomory: 2\n",
+      "  MIR: 1\n",
       "  StrongCG: 1\n",
       "\n",
-      "Explored 1 nodes (5 simplex iterations) in 0.06 seconds (0.00 work units)\n",
+      "Explored 1 nodes (11 simplex iterations) in 0.08 seconds (0.00 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 3: 3860 3693 68 \n",
+      "Solution count 3: 808.5 804.08 68 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 3.860000000000e+03, best bound 3.860000000000e+03, gap 0.0000%\n"
+      "Best objective 8.085000000000e+02, best bound 8.085000000000e+02, gap 0.0000%\n"
      ]
     }
    ],
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,15 +316,15 @@
     "for i in range(num_of_angles):\n",
     "    results.write(f',{nEE[i].x}')\n",
     "\n",
-    "results.write(f'\\nnBot')\n",
+    "results.write(f'\\nnBev')\n",
     "for i in range(num_of_angles):\n",
     "    results.write(f',{nBev[i].x}')\n",
     "    \n",
-    "results.write(f'\\nneBot')\n",
+    "results.write(f'\\nneBev')\n",
     "for i in range(num_of_angles):\n",
     "    results.write(f',{neBev[i].x}')\n",
     "    \n",
-    "results.write(f'\\nnEEBot')\n",
+    "results.write(f'\\nnEEBev')\n",
     "for i in range(num_of_angles):\n",
     "    results.write(f',{nEEBev[i].x}')\n",
     "\n",
