無用的掙扎orz

--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Maximize the total number of parking spots\n",
     "model.setObjective(\n",
-    "    quicksum(n[i] + ne[i] + nEE[i] + 1.5*(nBev[i] + neBev[i] + nEEBev[i]) + (4/25)*(nMot[i]+ neMot[i]+ nEEMot[i]) for i in range(num_of_angles)),\n",
+    "    quicksum(n[i] + ne[i] + nEE[i] + 1.4*(nBev[i] + neBev[i] + nEEBev[i]) + 0.18*(nMot[i]+ neMot[i]+ nEEMot[i]) for i in range(num_of_angles)),\n",
     "    GRB.MAXIMIZE)"
    ]
   },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -198,43 +198,37 @@
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 47 rows, 93 columns and 165 nonzeros\n",
-      "Model fingerprint: 0x3492a275\n",
+      "Model fingerprint: 0xac853812\n",
       "Variable types: 0 continuous, 93 integer (3 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+02]\n",
-      "  Objective range  [2e-01, 2e+00]\n",
+      "  Objective range  [2e-01, 1e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [2e+00, 1e+02]\n",
       "Found heuristic solution: objective 68.0000000\n",
       "Presolve removed 45 rows and 67 columns\n",
       "Presolve time: 0.00s\n",
-      "Presolved: 2 rows, 26 columns, 39 nonzeros\n",
-      "Found heuristic solution: objective 804.0800000\n",
+      "Presolved: 2 rows, 26 columns, 40 nonzeros\n",
+      "Found heuristic solution: objective 756.2400000\n",
       "Variable types: 0 continuous, 26 integer (0 binary)\n",
       "\n",
-      "Root relaxation: objective 8.183133e+02, 3 iterations, 0.00 seconds (0.00 work units)\n",
+      "Root relaxation: objective 7.637590e+02, 3 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0  818.31325    0    1  804.08000  818.31325  1.77%     -    0s\n",
-      "H    0     0                     808.5000000  818.31325  1.21%     -    0s\n",
-      "     0     0  813.81250    0    2  808.50000  813.81250  0.66%     -    0s\n",
-      "     0     0  813.81250    0    1  808.50000  813.81250  0.66%     -    0s\n",
-      "     0     0     cutoff    0       808.50000  808.50000  0.00%     -    0s\n",
+      "     0     0  763.75904    0    1  756.24000  763.75904  0.99%     -    0s\n",
       "\n",
       "Cutting planes:\n",
-      "  Gomory: 2\n",
       "  MIR: 1\n",
-      "  StrongCG: 1\n",
       "\n",
-      "Explored 1 nodes (11 simplex iterations) in 0.08 seconds (0.00 work units)\n",
+      "Explored 1 nodes (3 simplex iterations) in 0.05 seconds (0.00 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 3: 808.5 804.08 68 \n",
+      "Solution count 2: 756.24 68 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 8.085000000000e+02, best bound 8.085000000000e+02, gap 0.0000%\n"
+      "Best objective 7.562400000000e+02, best bound 7.562400000000e+02, gap 0.0000%\n"
      ]
     }
    ],
@@ -252,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
