--- a/OR_FP_draw.ipynb
+++ b/OR_FP_draw.ipynb
@@ -72,10 +72,14 @@
     "    content = ['30 degree', '45 degree', '60 degree', '75 degree', '90 degree']\n",
     "\n",
     "    \"\"\"\n",
-    "    Draw E, Xe -> left to right   \n",
+    "    Draw E, Xe, XeBev, EBev, XeMot, EMot -> left to right   \n",
     "    \"\"\"\n",
     "    numE = np.sum(E)\n",
     "    numXe = np.sum(Xe)\n",
+    "    numXeBev = np.sum(XeBev)\n",
+    "    numEBev = np.sum(EBev)\n",
+    "    numXeMot = np.sum(XeMot)\n",
+    "    numEMot = np.sum(EMot)\n",
     "    left = 0\n",
     "    right = 0\n",
     "    if numE==1 and numXe==1:\n",
