--- a/OR_FP.ipynb
+++ b/OR_FP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2024-02-29\n"
+     ]
+    }
+   ],
    "source": [
     "##### Model #####\n",
     "\n",
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Maximize the total number of parking spots\n",
     "model.setObjective(\n",
-    "    quicksum(n[i] + ne[i] + nEE[i] + 1.4*(nBev[i] + neBev[i] + nEEBev[i]) + 0.18*(nMot[i]+ neMot[i]+ nEEMot[i]) for i in range(num_of_angles)),\n",
+    "    quicksum(n[i] + ne[i] + nEE[i] + 1*(nBev[i] + neBev[i] + nEEBev[i]) + 1*(nMot[i]+ neMot[i]+ nEEMot[i]) for i in range(num_of_angles)),\n",
     "    GRB.MAXIMIZE)"
    ]
   },
@@ -144,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +162,7 @@
        "<gurobi.Constr *Awaiting Model Update*>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,37 +207,41 @@
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 47 rows, 93 columns and 165 nonzeros\n",
-      "Model fingerprint: 0xac853812\n",
+      "Model fingerprint: 0x92b01621\n",
       "Variable types: 0 continuous, 93 integer (3 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 2e+02]\n",
-      "  Objective range  [2e-01, 1e+00]\n",
+      "  Objective range  [1e+00, 1e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [2e+00, 1e+02]\n",
       "Found heuristic solution: objective 68.0000000\n",
-      "Presolve removed 45 rows and 67 columns\n",
+      "Presolve removed 45 rows and 84 columns\n",
       "Presolve time: 0.00s\n",
-      "Presolved: 2 rows, 26 columns, 40 nonzeros\n",
-      "Found heuristic solution: objective 756.2400000\n",
-      "Variable types: 0 continuous, 26 integer (0 binary)\n",
+      "Presolved: 2 rows, 9 columns, 13 nonzeros\n",
+      "Found heuristic solution: objective 3693.0000000\n",
+      "Variable types: 0 continuous, 9 integer (0 binary)\n",
       "\n",
-      "Root relaxation: objective 7.637590e+02, 3 iterations, 0.00 seconds (0.00 work units)\n",
+      "Root relaxation: objective 3.875906e+03, 3 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0  763.75904    0    1  756.24000  763.75904  0.99%     -    0s\n",
+      "     0     0 3875.90588    0    1 3693.00000 3875.90588  4.95%     -    0s\n",
+      "H    0     0                    3860.0000000 3875.90588  0.41%     -    0s\n",
+      "     0     0 3868.00000    0    2 3860.00000 3868.00000  0.21%     -    0s\n",
       "\n",
       "Cutting planes:\n",
-      "  MIR: 1\n",
+      "  Gomory: 3\n",
+      "  MIR: 2\n",
+      "  StrongCG: 1\n",
       "\n",
-      "Explored 1 nodes (3 simplex iterations) in 0.05 seconds (0.00 work units)\n",
+      "Explored 1 nodes (5 simplex iterations) in 0.08 seconds (0.00 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 2: 756.24 68 \n",
+      "Solution count 3: 3860 3693 68 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 7.562400000000e+02, best bound 7.562400000000e+02, gap 0.0000%\n"
+      "Best objective 3.860000000000e+03, best bound 3.860000000000e+03, gap 0.0000%\n"
      ]
     }
    ],
@@ -246,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
